--- a/pom.xml
+++ b/pom.xml
@@ -4,50 +4,29 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.dooapp</groupId>
+    <groupId>dooapp</groupId>
     <artifactId>cloud-binarystore</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <jclouds.version>1.8.0</jclouds.version>
+        <jclouds.version>1.8.1</jclouds.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.jclouds</groupId>
-            <artifactId>jclouds-blobstore</artifactId>
+            <artifactId>jclouds-core</artifactId>
             <version>${jclouds.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.jclouds.api</groupId>
-            <artifactId>s3</artifactId>
+            <groupId>org.apache.jclouds.provider</groupId>
+            <artifactId>aws-s3</artifactId>
             <version>${jclouds.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.modeshape</groupId>
             <artifactId>modeshape-jcr</artifactId>
             <version>4.0.0.Final</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <configuration>
-                    <instructions>
-
-                    </instructions>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
